viewModel and homeActivity done

--- a/NewsBreeze/app/src/main/res/layout/activity_home.xml
+++ b/NewsBreeze/app/src/main/res/layout/activity_home.xml
@@ -3,11 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.HomeActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentMainActivity"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
         android:layout_width="match_parent"
-        android:id="@+id/recyclerViewHomeActivity"
+        app:navGraph="@navigation/nav"
         android:layout_height="match_parent"/>
 
 </FrameLayout>
