Getting the repsonse from the api

--- a/NewsBreeze/app/src/main/res/layout/item_layout.xml
+++ b/NewsBreeze/app/src/main/res/layout/item_layout.xml
@@ -19,7 +19,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/cvArticle"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <RelativeLayout
@@ -29,6 +29,7 @@
 
         <ImageView
             android:id="@+id/ivImageArticle"
+            android:scaleType="fitCenter"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
 
