implementing OnClick Functionality

--- a/NewsBreeze/app/src/main/res/navigation/nav.xml
+++ b/NewsBreeze/app/src/main/res/navigation/nav.xml
@@ -9,5 +9,14 @@
         android:id="@+id/homeFragment"
         android:name="com.application.newsbreeze.ui.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_newsDetailsFragment"
+            app:destination="@id/newsDetailsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/newsDetailsFragment"
+        android:name="com.application.newsbreeze.ui.NewsDetailsFragment"
+        android:label="fragment_news_details"
+        tools:layout="@layout/fragment_news_details" />
 </navigation>
