--- a/NewsBreeze/app/src/main/res/layout/item_layout.xml
+++ b/NewsBreeze/app/src/main/res/layout/item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         
         <variable
@@ -7,20 +7,21 @@
             type="com.application.newsbreeze.remote.responses.Article" />
 
         <variable
-            name="responseModel"
-            type="com.application.newsbreeze.remote.responses.ResponseModell" />
-
-        <variable
-            name="source"
-            type="com.application.newsbreeze.remote.responses.Source" />
+            name="itemClickListener"
+            type="com.application.newsbreeze.remote.interfaces.OnCardClicked" />
         
     </data>
 
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/cvArticle"
+    app:cardCornerRadius="10dp"
+    android:onClick="@{()->itemClickListener.onCardClicked(article)}"
+    android:elevation="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:layout_height="wrap_content">
-
 
     <RelativeLayout
         android:layout_margin="10dp"
@@ -32,7 +33,6 @@
             android:scaleType="fitCenter"
             android:layout_width="match_parent"
             android:layout_height="200dp" />
-
         <TextView
             style="@style/TextView"
             android:id="@+id/tvDateSymbol"
@@ -42,6 +42,7 @@
             android:text="Date :- "/>
 
         <TextView
+            android:layout_marginStart="10dp"
             style="@style/TextView"
             android:textSize="@dimen/sp_20"
             android:id="@+id/tvDate"
@@ -52,6 +53,7 @@
             android:text="@{article.publishedAt}" />
 
         <TextView
+            android:layout_margin="10dp"
             style="@style/TextView"
             android:id="@+id/tvShortDescription"
             android:layout_width="match_parent"
